feature: campaign schedule
